# qrcode_research

./: CMakeLists.txt  check_camera.py  decoding_percent_metric1.json  decoding_percent_metric2.json  decoding_percent_metric3.json  detection_percent_metric1.json  detection_percent_metric2.json  detection_percent_metric3.json  detection_percent_metric4.json  detection_percent_metric5.json  metrics_detect.py  metrics_detectMulti.py  parse_files.py  prepare_testdata.py  qrcode_v2.cpp  resize_picture.py  test.py  test_multi.py
sample/: CMakeLists.txt  test.cpp
